[metadata]
name = verible_py
version = v0.0-3824
description = Python wrapper around invoking verible (https://chipsalliance.github.io/verible/)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/chipsalliance/verible
author = Henner Zeller
author_email = h.zeller@acm.org
license = Apache-2.0
license_files = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
python_requires = >=3.8
setup_requires =
    setuptools-download

[setuptools_download]
download_scripts =
    [verible-verilog-lint]
    group = verible-verilog-lint
    marker = sys_platform == "linux" and platform_machine == "x86_64"
    url = https://github.com/chipsalliance/verible/releases/download/v0.0-3824-g14eed6a0/verible-v0.0-3824-g14eed6a0-linux-static-x86_64.tar.gz
    sha256 = dc1daae341da824ee14800f21de0931974842b334e402a30ffe49cf6c7912e38
    extract = tar
    extract_path = verible-v0.0-3824-g14eed6a0/bin/verible-verilog-lint
    [verible-verilog-format]
    group = verible-verilog-format
    marker = sys_platform == "linux" and platform_machine == "x86_64"
    url = https://github.com/chipsalliance/verible/releases/download/v0.0-3824-g14eed6a0/verible-v0.0-3824-g14eed6a0-linux-static-x86_64.tar.gz
    sha256 = dc1daae341da824ee14800f21de0931974842b334e402a30ffe49cf6c7912e38
    extract = tar
    extract_path = verible-v0.0-3824-g14eed6a0/bin/verible-verilog-format
    [verible-verilog-lint]
    group = verible-verilog-lint
    marker = sys_platform == "darwin" and platform_machine == "x86_64"
    marker = sys_platform == "darwin" and platform_machine == "arm64"
    url = https://github.com/chipsalliance/verible/releases/download/v0.0-3824-g14eed6a0/verible-v0.0-3824-g14eed6a0-macOS.tar.gz
    sha256 = c3e4aeffeaceb9007e3619e16f92a5129d40b2a3e2c1124ff18565a881282643
    extract = tar
    extract_path = verible-v0.0-3824-g14eed6a0-macOS/bin/verible-verilog-lint
    [verible-verilog-format]
    group = verible-verilog-format
    marker = sys_platform == "darwin" and platform_machine == "x86_64"
    marker = sys_platform == "darwin" and platform_machine == "arm64"
    url = https://github.com/chipsalliance/verible/releases/download/v0.0-3824-g14eed6a0/verible-v0.0-3824-g14eed6a0-macOS.tar.gz
    sha256 = c3e4aeffeaceb9007e3619e16f92a5129d40b2a3e2c1124ff18565a881282643
    extract = tar
    extract_path = verible-v0.0-3824-g14eed6a0-macOS/bin/verible-verilog-format
    [verible-verilog-lint.exe]
    group = verible-verilog-lint
    marker = sys_platform == "win32" and platform_machine == "AMD64"
    marker = sys_platform == "cygwin" and platform_machine == "x86_64"
    url = https://github.com/chipsalliance/verible/releases/download/v0.0-3824-g14eed6a0/verible-v0.0-3824-g14eed6a0-win64.zip
    sha256 = 6e31ed3e5644991a107d0fd3e3ec20e7eb64bd174b72c8d03d8f8b90786ea791
    extract = zip
    extract_path = verible-v0.0-3824-g14eed6a0-win64/verible-verilog-lint.exe
    [verible-verilog-format.exe]
    group = verible-verilog-format
    marker = sys_platform == "win32" and platform_machine == "AMD64"
    marker = sys_platform == "cygwin" and platform_machine == "x86_64"
    url = https://github.com/chipsalliance/verible/releases/download/v0.0-3824-g14eed6a0/verible-v0.0-3824-g14eed6a0-win64.zip
    sha256 = 6e31ed3e5644991a107d0fd3e3ec20e7eb64bd174b72c8d03d8f8b90786ea791
    extract = zip
    extract_path = verible-v0.0-3824-g14eed6a0-win64/verible-verilog-format.exe
